[gd_scene load_steps=11 format=3 uid="uid://df00q74jhgta4"]

[ext_resource type="Texture2D" uid="uid://cpwjveku4gyqg" path="res://assets/sprites/question_block.png" id="2_40ef5"]
[ext_resource type="Script" path="res://blocks/question_block.gd" id="2_jpxdx"]
[ext_resource type="Texture2D" uid="uid://swkwgu4mnlcq" path="res://assets/sprites/empty_block.png" id="4_2tx5i"]

[sub_resource type="AtlasTexture" id="AtlasTexture_xh77r"]
atlas = ExtResource("2_40ef5")
region = Rect2(0, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_eka6x"]
atlas = ExtResource("2_40ef5")
region = Rect2(16, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_ov72j"]
atlas = ExtResource("2_40ef5")
region = Rect2(32, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_j1nyq"]
atlas = ExtResource("4_2tx5i")
region = Rect2(0, 0, 16, 16)

[sub_resource type="SpriteFrames" id="SpriteFrames_f1mhg"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_xh77r")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_xh77r")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_xh77r")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_eka6x")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ov72j")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_j1nyq")
}],
"loop": true,
"name": &"empty",
"speed": 5.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_4bs6b"]
size = Vector2(16, 16)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_m3o3j"]
size = Vector2(8, 4)

[node name="QuestionBlock" type="StaticBody2D"]
script = ExtResource("2_jpxdx")
item = 1

[node name="Sprite" type="AnimatedSprite2D" parent="."]
sprite_frames = SubResource("SpriteFrames_f1mhg")
autoplay = "default"

[node name="CollisionShape" type="CollisionShape2D" parent="."]
visible = false
shape = SubResource("RectangleShape2D_4bs6b")

[node name="HitArea" type="Area2D" parent="."]
visible = false
position = Vector2(0, -8)
collision_layer = 0
collision_mask = 6

[node name="Shape" type="CollisionShape2D" parent="HitArea"]
position = Vector2(0, -2)
shape = SubResource("RectangleShape2D_m3o3j")

[connection signal="body_entered" from="HitArea" to="." method="_on_hit_area_body_entered"]
